Stream agent updates and retire Python and Mesos in place
Replace one-second full-inventory polling with immediate durable updates,
30-second heartbeats and jittered five-minute reconciliation. Keep the original
SchedulerMain, policies, task state machine, Thrift API and UI authoritative.

Replace maintained Python tooling and the client with pinned Go tools and JSON
jobs. Remove Mesos/JNI/replicated-log execution paths and obsolete deployment
assets, retain public wire/storage compatibility, and provide strict offline
SQLite restore and historical snapshot import. Document the supported process
profile, explicit retirements and deferred production HA.

Validation: 1,337 scheduler and 124 commons tests; 144 UI tests; unchanged coverage
thresholds; installed distribution and all original quality gates; Go unit tests
and vet. Six-minute idle transport measurement shows no inventory polling or
idle ACK loop. Final live cluster/client qualification receipts follow separately.